--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "export-elements",
-  "version": "0.0.1",
-  "engines": {
-    "node": "8.5.0"
-  },
-  "description": "Wrapper around govuk-elements for DIT specific needs",
+  "name": "great-components",
+  "version": "1.0.0",
+  "description": "Shared components library for Great services.",
   "main": "index.js",
   "private": true,
   "author": "DIT",
@@ -13,17 +10,10 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@csstools/sass-import-resolve": "^1.0.0",
-    "flag-icon-css": "^3.2.1",
-    "govuk-elements": "https://github.com/alphagov/govuk_elements.git#master",
-    "govuk-elements-sass": "3.1.2",
-    "gulp-print": "^2.0.1",
+    "del": "^5.1.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-sass-lint": "^1.3.4"
+    "gulp-sourcemaps": "^2.6.5",
+    "great-styles": "file:../great-styles",
+    "gulp": "^4.0.2"
   }
 }
