--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   test:
     docker:
-      - image: circleci/python:3.6.6
+      - image: cimg/python:3.9.13
     steps:
       - checkout
       - restore_cache:
@@ -24,7 +24,7 @@ jobs:
 
   flake8:
     docker:
-      - image: circleci/python:3.6.6
+      - image: cimg/python:3.9.13
     steps:
       - checkout
       - run:
@@ -37,7 +37,7 @@ jobs:
 
   deploy_to_dev:
     docker:
-      - image: circleci/python:3.6.6
+      - image: cimg/python:3.9.13
     steps:
       - checkout
       - run:
